option java_package = "com.cloudata.keyvalue";

option java_generic_services = true;

service KeyValueService {
  rpc Execute (KeyValueRequest) returns (KeyValueResponse);
}

message ResponseEntry {
	optional bytes key = 1;
	optional bytes value = 2;
	optional bool changed = 3;
}

message KeyValueAction {
	optional uint64 store_id = 1;
	optional uint32 keyspace_id = 2;
	optional ActionType action = 3;
	optional bytes key = 4;
	optional bytes value = 5;
	
	repeated KeyValueAction children = 6;
	
	optional bool if_not_exists = 10;
	optional bytes if_value = 11;
}

enum ActionType {
	GET = 1;
	SET = 2;
	DELETE = 3;
	LIST_KEYS_WITH_PREFIX = 4;
	LIST_ENTRIES_WITH_PREFIX = 5;
	APPEND = 6;
	INCREMENT = 7;
	COMPOUND = 8;
}

message KeyValueRequest {
	optional KeyValueAction action = 1;
}

message ActionResponse {
	repeated ResponseEntry entry = 1;
	
	repeated ActionResponse children = 2;
}

message KeyValueResponse {
	optional ActionResponse action_response = 1;
}

